--- a/examples/dashboard.html
+++ b/examples/dashboard.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <!-- CSS -->
     <!-- TUKTUK -->
-    <link rel="stylesheet" href="../stylesheets/css/tuktuk.layout.css">
+<!--     <link rel="stylesheet" href="../stylesheets/css/tuktuk.layout.css">
     <link rel="stylesheet" href="../stylesheets/css/tuktuk.grid.css">
     <link rel="stylesheet" href="../stylesheets/css/tuktuk.flexbox.css">
     <link rel="stylesheet" href="../stylesheets/css/tuktuk.font.css">
@@ -18,7 +18,9 @@
     <link rel="stylesheet" href="../stylesheets/css/tuktuk.list.css">
     <link rel="stylesheet" href="../stylesheets/css/tuktuk.widget.css">
     <link rel="stylesheet" href="../stylesheets/css/tuktuk.icon.css">
-    <link rel="stylesheet" href="../stylesheets/css/tuktuk.media.css">
+    <link rel="stylesheet" href="../stylesheets/css/tuktuk.media.css"> -->
+    <link rel="stylesheet" href="../package/tuktuk.css">
+
     <!-- TUKTUK.THEME -->
     <link rel="stylesheet" href="../stylesheets/css/tuktuk.theme.css">
     <!-- TUKTUK.APP -->
