--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <link rel="stylesheet" href="stylesheets/css/tuktuk.media.css">
     <!-- TUKTUK.THEME -->
     <link rel="stylesheet" href="stylesheets/css/tuktuk.theme.css">
+    <!-- TUKTUK.WIDGETS -->
+    <link rel="stylesheet" href="package/widgets/tuktuk.widget.icon.css">
+    <link rel="stylesheet" href="package/widgets/tuktuk.widget.modal.css">
 </head>
 
 <body>
@@ -43,12 +46,12 @@
         <div class="column_10 offset_1">
             <h1 class="text normal">tuk<span class="text thin">tuk</span></h1>
 
-            <h3 class="margin bottom">This is not another front-end framework ... is a way to create sites and extend them with <span class="text normal">your own style</span>.</h3>
+            <h3 class="margin bottom">This isn't another frontend framework... is a way to create sites and extend them with <span class="text normal">your own style</span>.</h3>
             <a href="#" class="button large margin bottom"><span class="icon download"></span>Download <span class="text bold">tuk</span><span class="text normal">tuk</span> now!</a>
 
             <nav class=>
                 <a href="https://github.com/soyjavi/tuktuk" target="_blank" class="margin_right text color white"><span class="icon github"></span>GitHub Project</a>
-                <a href="http://tuktuk.tapquo.com/examples/" class="margin_right text color white"><span class="icon cube"></span>Examples version 0.2</a>
+                <span class="margin_left"><span class="icon cube"></span> Current Version 0.3</span>
             </nav>
         </div>
     </div>
@@ -60,9 +63,9 @@
     <div class="row text center margin_bottom">
         <div class="column_8 offset_2">
             <h1 class="text color theme">A new kid on the block</h1>
-            <h4 class="text thin">
-                Not trying to be competence of Bootstrap or Foundation, they play in another league. I am just worried about sites to be created easy, fast, responsive and fully extensible.
-            </h4>
+            <h3 class="text thin">
+                Not trying to be competence of <span class="text underline">Bootstrap</span> or <span class="text underline">Foundation</span>, they play in another league. Just worry to create responsive sites easily and fully extensible.
+            </h3>
         </div>
     </div>
     <div class="row text center book margin_top">
@@ -95,23 +98,23 @@
 <section class="bck lightest text center">
     <div class="row ">
         <div class="column_10 offset_1 margin_bottom">
-            <h1 class="text color theme">Columns <strike>960</strike> 1200 column</h1>
-            <h3 class="text thin">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae possimus earum incidunt quis error vero quisquam ullam aut id dolore</h3>
+            <h1 class="text color theme">Turn it up to 12 columns</h1>
+            <h3 class="text thin">Tuktuk is divided horizontally into a series of 12 columns, and vertically into rows. 12 columns divide nicely into equal columns of two, three, four, or six columns.</h3>
          </div>
     </div>
     <div class="row margin_bottom">
-        <div class="column_1 bck light padding">1</div>
-        <div class="column_1 bck light padding">1</div>
-        <div class="column_1 bck light padding">1</div>
-        <div class="column_1 bck light padding">1</div>
-        <div class="column_1 bck light padding">1</div>
-        <div class="column_1 bck light padding">1</div>
-        <div class="column_1 bck light padding">1</div>
-        <div class="column_1 bck light padding">1</div>
-        <div class="column_1 bck light padding">1</div>
-        <div class="column_1 bck light padding">1</div>
-        <div class="column_1 bck light padding">1</div>
-        <div class="column_1 bck light padding">1</div>
+        <div class="column_1 bck light padding_top padding_bottom">1</div>
+        <div class="column_1 bck light padding_top padding_bottom">1</div>
+        <div class="column_1 bck light padding_top padding_bottom">1</div>
+        <div class="column_1 bck light padding_top padding_bottom">1</div>
+        <div class="column_1 bck light padding_top padding_bottom">1</div>
+        <div class="column_1 bck light padding_top padding_bottom">1</div>
+        <div class="column_1 bck light padding_top padding_bottom">1</div>
+        <div class="column_1 bck light padding_top padding_bottom">1</div>
+        <div class="column_1 bck light padding_top padding_bottom">1</div>
+        <div class="column_1 bck light padding_top padding_bottom">1</div>
+        <div class="column_1 bck light padding_top padding_bottom">1</div>
+        <div class="column_1 bck light padding_top padding_bottom">1</div>
     </div>
     <div class="row margin_bottom">
         <div class="column_4 bck light padding">4</div>
@@ -137,7 +140,7 @@
     <div class="row ">
         <div class="column_10 offset_1 margin_bottom">
             <h1 class="text color theme">Offsetting columns</h1>
-            <h3 class="text thin">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae possimus earum incidunt quis error vero quisquam ullam aut id dolore</h3>
+            <h3 class="text thin">You has the option to offset a column, which should make life all the bit easier if you you need to add an extra bit of space between columns.</h3>
          </div>
     </div>
 
@@ -160,7 +163,7 @@
     <div class="row margin_bottom">
         <div class="column_10 offset_1 text center">
             <h1 class="text color theme">Headings</h1>
-            <h3 class="text thin">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae possimus earum incidunt quis error vero quisquam ullam aut id dolore</h3>
+            <h3 class="text thin">You can use headings in a manner optimized for each device.</h3>
          </div>
      </div>
 
@@ -180,7 +183,7 @@
     <div class="row ">
         <div class="column_10 offset_1 text center margin_bottom">
             <h1 class="text color theme">Buttons</h1>
-            <h3 class="text thin">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae possimus earum incidunt quis error vero quisquam ullam aut id dolore</h3>
+            <h3 class="text thin">What would a site without buttons? Tuktuk have a gallery of styles and sizes that will be enough to interact with your site.</h3>
          </div>
     </div>
     <div class="row">
@@ -219,7 +222,7 @@
     <div class="row">
         <div class="column_10 offset_1 text center margin_bottom">
             <h1 class="text color theme">Lists</h1>
-            <h3 class="text thin">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae possimus earum incidunt quis error vero quisquam ullam aut id dolore</h3>
+            <h3 class="text thin">If the buttons are important, so are the lists. Tuktuk gives a group of styles easily usable.</h3>
          </div>
     </div>
 
@@ -238,7 +241,6 @@
                 </li>
                 <li>Maecenas sed diam eget risus varius blandit sit amet non magna.</li>
             </ul>
-            <p>For standard <code>&lt;ul&gt;</code> bullet ponts ive replace the normal dot with a graphic which can be changes easily</p>
         </div>
 
         <div class="column_3">
@@ -255,7 +257,6 @@
                 </li>
                 <li>Maecenas sed diam eget risus varius blandit sit amet non magna.</li>
             </ol>
-            <p>As with <code>&lt;ul&gt;</code> the ordered lists <code>&lt;ol&gt;</code> have had some extra CSS added to them so they are that little bit nicer to look at.</p>
         </div>
 
         <div class="column_3">
@@ -272,7 +273,6 @@
                 </li>
                 <li>Maecenas sed diam eget risus varius blandit sit amet non magna.</li>
             </ul>
-            <p>For circular bullet point all you need to do is add the class <code>.circle</code> to the  <code>&lt;ul&gt;</code></p>
 
         </div>
 
@@ -290,7 +290,6 @@
                 </li>
                 <li>Maecenas sed diam eget risus varius blandit sit amet non magna.</li>
             </ul>
-            <p>For square bullet point all you need to do is add the class <code>.square</code> to the <code>&lt;ul&gt;</code></p>
         </div>
     </div>
 </section>
@@ -301,7 +300,7 @@
      <div class="row margin_bottom">
             <div class="column_10 offset_1 text center">
             <h1 class="text color theme">Forms & Tables</h1>
-            <h3 class="text thin">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae possimus earum incidunt quis error vero quisquam ullam aut id dolore</h3>
+            <h3 class="text thin">Get that forms & lists looks equally regardless of device and browser.</h3>
          </div>
      </div>
 
@@ -389,7 +388,7 @@
                         </tr>
                     </tbody>
                 </table>
-                <p class="text justify">In TukTuk I've included some styling for table elements like Table Headings (TH) and the option to have odd and even table rows as well as the ability to highlight a cell in your table..!</p>
+                In TukTuk I've included some styling for table elements like Table Headings (TH) and the option to have odd and even table rows as well as the ability to highlight a cell in your table..!
             </div>
         </div>
 </section>
@@ -417,36 +416,31 @@
             <img src="images/smartphone.png" class="responsive hide-phone" style="opacity:0.1;"/>
         </div>
     </div>
-</section>
 
-<!-- ========================== Navigation ========================== -->
-<section class="bck light ">
-    <div class="row ">
-        <div class="column_10 offset_1 text center">
-            <h1 class="text color theme">Navigation</h1>
-            <h3 class="text thin">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae possimus earum incidunt quis error vero quisquam ullam aut id dolore</h3>
-         </div>
+    <div class="row margin_top">
+        <table class="text align center">
+            <tbody>
+                <tr>
+                    <td>hide-screen</td>
+                    <td>hide-tablet</td>
+                    <td>hide-phone</td>
+                </tr>
+                <tr>
+                    <td>show-screen</td>
+                    <td>show-tablet</td>
+                    <td>show-phone</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </section>
-<section class="bck light underline  navigation ">
-    <div class="row text center">
-        <nav class="group text bold">
-            <a href="#" class="active"><span class="icon folder"></span>Slides</a>
-            <a href="#"><span class="icon picture"></span>Themes</a>
-            <a href="#"><span class="icon settings"></span>Applications</a>
-            <a href="#"><span class="icon users"></span>Friends</a>
-            <a href="#"><span class="icon star-full"></span>Favorites</a>
-        </nav>
-    </div>
-</section>
-
 
 <!-- ========================== Typography ========================== -->
-<section class="bck lightest">
+<section class="bck light">
     <div class="row ">
         <div class="column_10 offset_1 text center margin_bottom">
             <h1 class="text color theme">Typography</h1>
-            <h3 class="text thin">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae possimus earum incidunt quis error vero quisquam ullam aut id dolore</h3>
+            <h3 class="text thin">Discover how you can play with the style of any element using the style inheritance with ooCSS.</h3>
          </div>
     </div>
 
@@ -490,6 +484,115 @@
     </div>
 </section>
 
+<!-- ========================== Navigation ========================== -->
+<section class="bck lightest">
+    <div class="row ">
+        <div class="column_10 offset_1 text center">
+            <h1 class="text color theme">Navigation</h1>
+            <h3 class="text thin">A navigation menu that works in a desktop or a mobile?</h3>
+         </div>
+    </div>
+</section>
+<section class="bck light underline navigation ">
+    <div class="row text center">
+        <nav class="group text bold">
+            <a href="#" class="active"><span class="icon folder"></span>Slides</a>
+            <a href="#"><span class="icon picture"></span>Themes</a>
+            <a href="#"><span class="icon settings"></span>Applications</a>
+            <a href="#"><span class="icon users"></span>Friends</a>
+            <a href="#"><span class="icon star-full"></span>Favorites</a>
+        </nav>
+    </div>
+</section>
+
+
+<!-- ========================== Widgets ========================== -->
+<section class="bck lightest">
+    <div class="row ">
+        <div class="column_10 offset_1 text center margin_bottom">
+            <h1 class="text color theme">Widgets</h1>
+            <h3 class="text thin">Isn't enough? Take a look how you can extending functionality in your projects.</h3>
+         </div>
+    </div>
+
+    <div class="row">
+        <div class="column_6">
+            <h4>tuktuk.widget.<span class="text bold">icon</span>.css</h4>
+            <div class="margin_bottom">A embeded and small library of icons in CSS.</div>
+            <table>
+
+                <tbody>
+                    <tr>
+                        <td class="text center">
+                            <span class="icon user"></span>
+                            <span class="icon search"></span>
+                            <span class="icon accept"></span>
+                            <span class="icon cancel"></span>
+                            <span class="icon locked"></span>
+                            <span class="icon cog"></span>
+                            <span class="icon tag"></span>
+
+                            <span class="icon share"></span>
+                            <span class="icon twitter"></span>
+                            <span class="icon facebook"></span>
+                            <span class="icon github"></span>
+                            <span class="icon wordpress"></span>
+                            <span class="icon dribbble"></span>
+
+                            <span class="icon html5"></span>
+                            <span class="icon css3"></span>
+                            <span class="icon chrome"></span>
+                            <span class="icon firefox"></span>
+                            <span class="icon IE"></span>
+                            <span class="icon opera"></span>
+                            <span class="icon safari"></span>
+
+                            <span class="icon heart"></span>
+                            <span class="icon star"></span>
+                            <span class="icon paper-plane"></span>
+                            <span class="icon cube"></span>
+                            <span class="icon upload"></span>
+                            <span class="icon download"></span>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="column_6">
+            <h4>tuktuk.widget.<span class="text bold">modal</span> (.css & .js)</h4>
+            <div class="margin_bottom">Modal notifications for any device.</div>
+            <div class="row">
+                <button class="column_2" data-tuktuk-modal="default_modal">Default</button>
+                <button class="column_2 cancel" data-tuktuk-modal="small_modal">Small</button>
+                <button class="column_2 accept" data-tuktuk-modal="big_modal">Big</button>
+            </div>
+
+        </div>
+    </div>
+</section>
+
+<!-- ========================== MODALS ========================== -->
+
+<div id="default_modal" data-tuktuk="modal">
+    <h5 class="text bold">Default modal window</h5>
+    <hr/>
+    <div class="margin_bottom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus nihil aut sit incidunt amet modi dolores a sed.</div>
+    <button data-action="close" class="button">Cancel</button>
+</div>
+
+<div id="small_modal" data-tuktuk="modal" class="small">
+    <h5 class="text bold">Small modal window</h5>
+    <hr/>
+    <div class="margin_bottom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus nihil aut sit incidunt amet modi dolores a sed.</div>
+    <button data-action="close" class="button anchor cancel">Cancel</button>
+</div>
+
+<div id="big_modal" data-tuktuk="modal" class="big">
+    <h5 class="text bold">Big modal window</h5>
+    <hr/>
+    <div class="margin_bottom text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus nihil aut sit incidunt amet modi dolores a sed.</div>
+    <button data-action="close" class="button large accept">Cancel</button>
+</div>
 
 <!-- ========================== AUTHOR ========================== -->
 <section class="bck dark">
@@ -513,29 +616,34 @@
 
 <!-- ========================== FOOTER ========================== -->
 <footer class="bck darkest text color white">
-    <div class="row margin_top bottom">
+    <div class="row margin_top margin_bottom">
         <div class="column_4">
             <p class="text bold">Made by TAPQUO</p>
             <small>We are a mobile user experiences company located in Bilbao, Spain. We've put over 12 years of experience building products.</small>
         </div>
         <div class="column_4">
             <p class="text bold">Join the team!</p>
-            <small>Do you want to be part of our team? Let us know how you're! <a href="mailto">Get in touch</a> →</small>
+            <small>
+                Do you want to be part of our team? Let us know how you're!
+                <br/>
+                <a href="mailto">Get in touch →</a>
+            </small>
         </div>
         <div class="column_4">
-            <p class="text bold">Need some help?</p>
-            <small>For quick answers or help <span class="text normal">connect</span> with me in</small>
+            <p class="text bold">Connect with me in...</p>
             <h3>
-                <a href="#" class="icon twitter"></a>
-                <a href="#" class="icon facebook"></a>
-                <a href="#" class="icon dribbble"></a>
-                <a href="#" class="icon wordpress"></a>
-                <a href="#" class="icon github"></a>
-
+                <a href="https://twitter.com/soyjavi" class="icon twitter"></a>
+                <a href="http://dribbble.com/soyjavi" class="icon dribbble"></a>
+                <a href="https://github.com/soyjavi" class="icon github"></a>
+                <a href="https://www.facebook.com/javi.jimenez.villar" class="icon facebook"></a>
             </h3>
         </div>
     </div>
 </footer>
+
+    <!-- TUKTUK.WIDGETS -->
+    <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
+    <script src="package/widgets/tuktuk.widget.modal.js"></script>
 
 </body>
 </html>
