--- a/index.html
+++ b/index.html
@@ -47,11 +47,12 @@
             <h1 class="text normal">tuk<span class="text thin">tuk</span></h1>
 
             <h3 class="margin bottom">This isn't another frontend framework... is a way to create sites and extend them with <span class="text normal">your own style</span>.</h3>
-            <a href="#" class="button large margin bottom"><span class="icon download"></span>Download <span class="text bold">tuk</span><span class="text normal">tuk</span> now!</a>
 
-            <nav class=>
+            <a href="#" class="button large margin bottom"><span class="icon download"></span>Download <span class="text bold">tuk</span><span class="text normal">tuk</span></a>
+
+            <nav >
                 <a href="https://github.com/soyjavi/tuktuk" target="_blank" class="margin_right text color white"><span class="icon github"></span>GitHub Project</a>
-                <span class="margin_left"><span class="icon cube"></span> Current Version 0.3</span>
+                <span class="margin_left"><span class="icon cube"></span> Version 0.3</span>
             </nav>
         </div>
     </div>
@@ -64,7 +65,7 @@
         <div class="column_8 offset_2">
             <h1 class="text color theme">A new kid on the block</h1>
             <h3 class="text thin">
-                Not trying to be competence of <span class="text underline">Bootstrap</span> or <span class="text underline">Foundation</span>, they play in another league. Just worry to create responsive sites easily and fully extensible.
+                Not trying to be competence of Bootstrap or Foundation, they play in another league. Just worry to create responsive sites easily and fully extensible.
             </h3>
         </div>
     </div>
@@ -626,7 +627,7 @@
             <small>
                 Do you want to be part of our team? Let us know how you're!
                 <br/>
-                <a href="mailto">Get in touch →</a>
+                <a href=​"mailto:​hello@tapquo.com?subject=Job">​Get in touch →​</a>​
             </small>
         </div>
         <div class="column_4">
