Fix error padding in Firefox

--- a/index.html
+++ b/index.html
@@ -117,20 +117,20 @@
             <div class="column_1 bck light padding_top padding_bottom">1</div>
         </div>
         <div class="row margin_bottom">
-            <div class="column_4 bck light padding">4</div>
-            <div class="column_4 bck light padding">4</div>
-            <div class="column_4 bck light padding">4</div>
+            <div class="column_4 bck light padding_top padding_bottom">4</div>
+            <div class="column_4 bck light padding_top padding_bottom">4</div>
+            <div class="column_4 bck light padding_top padding_bottom">4</div>
         </div>
         <div class="row margin_bottom">
-            <div class="column_4 bck light padding ">4</div>
-            <div class="column_8 bck light padding">8</div>
+            <div class="column_4 bck light padding_top padding_bottom ">4</div>
+            <div class="column_8 bck light padding_top padding_bottom">8</div>
         </div>
         <div class="row margin_bottom">
-            <div class="column_6 bck light padding">6</div>
-            <div class="column_6 bck light padding">6</div>
+            <div class="column_6 bck light padding_top padding_bottom">6</div>
+            <div class="column_6 bck light padding_top padding_bottom">6</div>
         </div>
         <div class="row">
-            <div class="column_12 bck light padding">12</div>
+            <div class="column_12 bck light padding_top padding_bottom">12</div>
         </div>
     </section>
 
@@ -145,15 +145,15 @@
         </div>
 
         <div class="row margin_bottom">
-            <div class="column_4 bck lightest padding">4</div>
-            <div class="column_4 offset_4 bck dark text color white padding">4 with 4 offset</div>
+            <div class="column_4 bck lightest padding_top padding_bottom">4</div>
+            <div class="column_4 offset_4 bck dark text color white padding_top padding_bottom">4 with 4 offset</div>
         </div>
         <div class="row margin_bottom">
-            <div class="column_3 offset_3 bck dark text color white padding">3 with 3 offset</div>
-            <div class="column_3 offset_3 bck dark text color white padding">3 with 3 offset</div>
+            <div class="column_3 offset_3 bck dark text color white padding_top padding_bottom">3 with 3 offset</div>
+            <div class="column_3 offset_3 bck dark text color white padding_top padding_bottom">3 with 3 offset</div>
         </div>
         <div class="row">
-            <div class="column_8 offset_4 bck dark text color white padding">8 with 4 offset</div>
+            <div class="column_8 offset_4 bck dark text color white padding_top padding_bottom">8 with 4 offset</div>
         </div>
     </section>
 
