Improving the main copies
Just improving (IMHO! ;) the English of some of the main copies in the landing page.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="column_10 offset_1">
                 <h1 class="text normal">tuk<span class="text thin">tuk</span></h1>
 
-                <h3 class="margin bottom">This isn't another frontend framework... is a way to create sites and extend them with <span class="text normal">your own style</span>.</h3>
+                <h3 class="margin bottom">This isn't another frontend framework... it's a way to create sites and extend them with <span class="text normal">your own style</span>.</h3>
 
                 <a href="http://tuktuk.tapquo.com/download/tuktuk.0.3.zip" class="button large margin bottom"><span class="icon download"></span>Download <span class="text bold">tuk</span><span class="text normal">tuk</span></a>
 
@@ -64,7 +64,7 @@
             <div class="column_8 offset_2">
                 <h1 class="text color theme">A new kid on the block</h1>
                 <h3 class="text thin">
-                    Not trying to be competence of Bootstrap or Foundation, they play in another league. Just worry to create responsive sites easily and fully extensible.
+                    Not trying to compete with Bootstrap or Foundation because they play in another league. Just worry about creating responsive and fully extensible sites easily.
                 </h3>
             </div>
         </div>
@@ -73,22 +73,22 @@
             <div class="column_3">
                 <h1 class="icon css3 text color theme"></h1>
                 <h5>CSS3 Powered</h5>
-                <small>The premise is to use as much as possible the features of the latest CSS specification. Don't try to use tuktuk in your hated IE6.</small>
+                <small>The premise is to use as much as possible the features of the latest CSS specification. Don't try to use Tuktuk in your hated IE6.</small>
             </div>
             <div class="column_3">
                 <h1 class="icon paper-plane text color theme"></h1>
                 <h5>Lightweight & fast</h5>
-                <small>You don't want to carry heavy stylesheets that the only thing they get is a slow loading site. Tuktuk makes it easy, weighs 15kb.</small>
+                <small>You don't want to carry heavy stylesheets that only make for a slow loading site. Tuktuk is lightweight at just 15kb.</small>
             </div>
             <div class="column_3">
                 <h1 class="icon cube text color theme"></h1>
                 <h5>Object Oriented CSS</h5>
-                <small>The purpose is to encourage code reuse and faster and more efficient stylesheets that are easier to add to and maintain.</small>
+                <small>The purpose is to encourage code reuse plus faster and more efficient stylesheets that are easier to add to and maintain.</small>
             </div>
             <div class="column_3">
                 <h1 class="icon github text color theme"></h1>
                 <h5>Community Project</h5>
-                <small>Each new line of code is welcome, I hope that developers and restless minds help me to improve this humble project day by day.</small>
+                <small>Each new line of code is welcomed, I hope that developers and restless minds help me improve this humble project day by day.</small>
             </div>
         </div>
     </section>
