More changes in the copies of the landing page

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <div class="row ">
             <div class="column_10 offset_1 margin_bottom">
                 <h1 class="text color theme">Offsetting columns</h1>
-                <h3 class="text thin">You have the option to offset a column, which should make life all the bit easier if you you need to add an extra bit of space between columns.</h3>
+                <h3 class="text thin">You have the option to offset a column, which should make life a little bit easier if you you need to add extra spacing between columns.</h3>
              </div>
         </div>
 
@@ -163,7 +163,7 @@
         <div class="row margin_bottom">
             <div class="column_10 offset_1 text center">
                 <h1 class="text color theme">Headings</h1>
-                <h3 class="text thin">You can use headings in a manner optimized for each device.</h3>
+                <h3 class="text thin">You can use headings in a way optimized for each device.</h3>
              </div>
          </div>
 
@@ -183,7 +183,7 @@
         <div class="row ">
             <div class="column_10 offset_1 text center margin_bottom">
                 <h1 class="text color theme">Buttons</h1>
-                <h3 class="text thin">a site without buttons? Tuktuk have a gallery of styles and sizes that will be enough to interact with your site.</h3>
+                <h3 class="text thin">a site without buttons? Tuktuk has a gallery of styles and sizes that will be enough to interact with your site.</h3>
              </div>
         </div>
         <div class="row">
@@ -222,7 +222,7 @@
         <div class="row">
             <div class="column_10 offset_1 text center margin_bottom">
                 <h1 class="text color theme">Lists</h1>
-                <h3 class="text thin">If the buttons are important, so are the lists. Tuktuk gives a group of styles easily usable.</h3>
+                <h3 class="text thin">If buttons are important, so are lists. Tuktuk comes with a group of styles easily usable.</h3>
              </div>
         </div>
 
@@ -244,7 +244,7 @@
             </div>
 
             <div class="column_3">
-                <h4>Ordered Bullets</h4>
+                <h4>Numbered Bullets</h4>
                 <ol class="square">
                     <li>Cras mattis consectetur purus sit amet fermentum.</li>
                     <li>
@@ -300,7 +300,7 @@
          <div class="row margin_bottom">
                 <div class="column_10 offset_1 text center">
                 <h1 class="text color theme">Forms & Tables</h1>
-                <h3 class="text thin">Get that forms & lists looks equally regardless of device and browser.</h3>
+                <h3 class="text thin">Make forms look gorgeous regardless of device and browser.</h3>
              </div>
          </div>
 
@@ -388,7 +388,7 @@
                             </tr>
                         </tbody>
                     </table>
-                    In TukTuk I've included some styling for table elements like Table Headings (TH) and the option to have odd and even table rows as well as the ability to highlight a cell in your table..!
+                    TukTuk comes with some styling for table elements like Table Headings (TH) and the option to have odd and even table rows as well as the ability to highlight a cell in your table!
                 </div>
             </div>
     </section>
@@ -398,7 +398,7 @@
         <div class="row margin_bottom">
             <div class="column_10 offset_1 text center ">
                 <h1 class="text color theme">Show & Hide</h1>
-                <h3 class="text thin">There are times when you may need to only show something on a desktop and not a tablet & phone or the reverse. I've done the work for you with some extra classes to hide & show content.</h3>
+                <h3 class="text thin">There are times when you may need to only show something on a desktop and not on a tablet or phone or the other way around. TukTuk will do all the work for you with some extra classes to hide & show content.</h3>
              </div>
         </div>
 
@@ -440,7 +440,7 @@
         <div class="row ">
             <div class="column_10 offset_1 text center margin_bottom">
                 <h1 class="text color theme">Typography</h1>
-                <h3 class="text thin">Discover how you can play with the style of any element using the style inheritance with ooCSS.</h3>
+                <h3 class="text thin">Discover how you can play with the style of any element using style inheritance with ooCSS.</h3>
              </div>
         </div>
 
@@ -489,7 +489,7 @@
         <div class="row ">
             <div class="column_10 offset_1 text center">
                 <h1 class="text color theme">Navigation</h1>
-                <h3 class="text thin">A navigation menu that works in a desktop or a mobile?</h3>
+                <h3 class="text thin">Need a navigation menu that works both in a desktop and a mobile?</h3>
              </div>
         </div>
     </section>
@@ -511,14 +511,14 @@
         <div class="row ">
             <div class="column_10 offset_1 text center margin_bottom">
                 <h1 class="text color theme">Widgets</h1>
-                <h3 class="text thin">Isn't enough? Take a look how you can extending functionality in your projects.</h3>
+                <h3 class="text thin">If all of the above isn't enough, take a look at how you can easily extend TukTuk's functionality in your projects.</h3>
              </div>
         </div>
 
         <div class="row">
             <div class="column_6">
                 <h4>tuktuk.widget.<span class="text bold">icon</span>.css</h4>
-                <div class="margin_bottom">A embeded and small library of icons in CSS.</div>
+                <div class="margin_bottom">A small embeded library of icons in CSS.</div>
                 <table>
 
                     <tbody>
@@ -599,7 +599,7 @@
         <div class="row margin_bottom">
             <div class="column_10 offset_1 text center color white">
                 <h1>Author</h1>
-                <h3 class="text thin">Javi Jimenez is the CTO and CO-founder of <a href="http://tapquo.com">tapquo</a>. A restless mind that always strives for continuous improvement, able to create frameworks like <a href="http://lungo.tapquo.com">Lungo</a>, <a href="http://quojs.tapquo.com">QuoJS</a>, <a href="http://monocle.tapquo.com">Monocle</a> used by thousands of developers around the world.</h3>
+                <h3 class="text thin">Javi Jimenez is the CTO and co-founder of <a href="http://tapquo.com">tapquo</a>. A restless mind that always strives for continuous improvement, able to create frameworks like <a href="http://lungo.tapquo.com">Lungo</a>, <a href="http://quojs.tapquo.com">QuoJS</a>, <a href="http://monocle.tapquo.com">Monocle</a> used by thousands of developers around the world.</h3>
              </div>
          </div>
 
