--- a/examples/persona.html
+++ b/examples/persona.html
@@ -22,8 +22,8 @@
     <link rel="stylesheet" href="../stylesheets/css/tuktuk.theme.css">
     <link rel="stylesheet" href="css/persona.css">
     <!-- TUKTUK.APP -->
-    <link rel="stylesheet" href="../widgets/icon/css/tuktuk.widget.icon.css">
-    <link rel="stylesheet" href="../widgets/modal/css/tuktuk.widget.modal.css">
+    <link rel="stylesheet" href="../package/widgets/tuktuk.widget.icon.css">
+    <link rel="stylesheet" href="../package/widgets/tuktuk.widget.modal.css">
 </head>
 <body>
 
@@ -31,89 +31,119 @@
 <header class="bck darkest">
     <div class="row">
         <div class="column_3">
-            <a href="#" class="logo text normal color white">app<span class="text book">nima</span></a>
+            <a href="#" class="logo text normal color white">APP<span class="text book">nima</span></a>
         </div>
         <nav class="column_6 offset_3 text normal right">
-            <a href="#">Logout</a>
             <img src="http://tapquo.com/images/team-javi.jpg" class="avatar "/>
-            <button>
-
-                Profile</button>
+            <a href="#">Nickname</a>
+            <button class="cancel">Logout</button>
         </nav>
     </div>
 </header>
 
 
-<!--
-<div class="bck dark text color white padding_top padding_bottom">
-    <div class="row">
-        <div class="column_12">
-            <img src="http://tapquo.com/images/team-javi.jpg" class="avatar big float left margin_right"/>
-
-            <h1>
-                Javi Jiménez
-                <nav class="float right">
-                    <a href="#" class="button">Follow</a>
-                </nav>
-            </h1>
-            <h5>http://tapquo.com</h5>
-        </div>
-    </div>
-</div>
--->
-
 <section class="bck light">
     <div class="row padding_top padding_bottom bck light">
+
         <div class="column_4">
-            <div class="padding margin_bottom bck lightest display block">
+            <div class="padding margin_bottom bck lightest bordered">
                 <img src="http://tapquo.com/images/team-javi.jpg" class="avatar medium float left margin_right"/>
                 <div class="text bold">lorem ipsum name</div>
                 <small>aslkjadskdlas</small>
             </div>
 
-            <nav class="menu bck lightest">
+            <nav class="menu bck lightest bordered">
                 <a href="#">Account<span class="icon user float right"></span></a>
                 <a href="#">Password<span class="icon user float right"></span></a>
                 <a href="#">Móvil<span class="icon user float right"></span></a>
                 <a href="#">Notificaciones<span class="icon user float right"></span></a>
-                <a href="#" class="current">Aplicaciones<span class="icon user float right"></span></a>
+                <a href="#" class="active">Aplicaciones<span class="icon user float right"></span></a>
+                <a href="#">Aplicaciones<span class="icon user float right"></span></a>
             </nav>
         </div>
 
         <div class="column_8">
-            <h3>Applications</h3>
-            <h6>Estas son las alicaciones que tienen acceso a tu cuenta de Twitter. <a href="#">Aprender más</a>.</h6>
+            <div class="bck lightest bordered padding margin_bottom">
+                <h3>Applications</h3>
+                <h6>Estas son las alicaciones que tienen acceso a tu cuenta de Twitter. <a href="#">Aprender más</a>.</h6>
 
-            <ul class="margin_top apps none bck light">
-                <li class="padding_top padding_bottom">
-                    <img src="http://placehold.it/57x57" class="float left">
-                    <div>
-                        <button class="float right tiny secondary">Revocar acceso</button>
-                        <strong class="text bold display block">lorem ipsum app</strong>
-                        500px.com is Photography
-                        <small class="text small">
-                            Permisos: leer y escribir<br/>
-                            Aprobado: sábado, 1 de diciembre de 2012 08:39:52
-                        </small>
-                    </div>
-                </li>
+                <ul class="margin_top none apps">
+                    <li class="padding_top padding_bottom">
+                        <img src="http://placehold.it/57x57" class="float left">
+                        <div>
+                            <button class="float right tiny secondary" data-tuktuk-modal="default_modal">revoke access</button>
+                            <strong class="text bold display block">lorem ipsum app</strong>
+                            500px.com is Photography
+                            <small class="text small">
+                                Permisos: leer y escribir<br/>
+                                Aprobado: sábado, 1 de diciembre de 2012 08:39:52
+                            </small>
+                        </div>
+                    </li>
 
-                <li class="padding_top padding_bottom">
-                    <img src="http://placehold.it/57x57" class="float left">
-                    <div >
-                        <button class="float right tiny secondary">Revocar acceso</button>
-                        <strong class="text bold display block">lorem ipsum app</strong>
-                        500px.com is Photography
-                        <small class="text small">
-                            Permisos: leer y escribir<br/>
-                            Aprobado: sábado, 1 de diciembre de 2012 08:39:52
-                        </small>
-                    </div>
-                </li>
-            </ul>
+                    <li class="padding_top padding_bottom">
+                        <img src="http://placehold.it/57x57" class="float left">
+                        <div >
+                            <button class="float right tiny secondary">revoke access</button>
+                            <strong class="text bold display block">lorem ipsum app</strong>
+                            500px.com is Photography
+                            <small class="text small">
+                                Permisos: leer y escribir<br/>
+                                Aprobado: sábado, 1 de diciembre de 2012 08:39:52
+                            </small>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+
+
+
+            <div class="form bck lightest bordered padding margin_bottom">
+                <h3>Form</h3>
+                <h6 class="margin_bottom">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h6>
+
+                <label>Nombre de usuario</label>
+                <input type="text" name="" id="" />
+
+                <label>Correo electrónico</label>
+                <input type="text" name="" id="" />
+
+                <hr/>
+
+                <label>Idioma</label>
+                <select id="dropdown">
+                    <option>Select something...</option>
+                    <option>Drop down 01</option>
+                    <option>Drop down 02</option>
+                </select>
+
+                <label>Zona horaria</label>
+                <select id="dropdown">
+                    <option>Select something...</option>
+                    <option>Drop down 01</option>
+                    <option>Drop down 02</option>
+                </select>
+
+                <hr/>
+
+                <label>Bio</label>
+                <textarea></textarea>
+
+                <hr/>
+
+                <button class="accept margin_right"><span class="icon accept"></span>Send</button>
+                <button class="cancel"><span class="icon cancel"></span>Cancel</button>
+            </div>
         </div>
 </section>
 
+
+<div id="default_modal" data-tuktuk="modal">
+    <h5 class="text bold">Default modal window</h5>
+    <hr>
+    <div class="margin_bottom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus nihil aut sit incidunt amet modi dolores a sed.</div>
+    <button data-action="close" class="button">Cancel</button>
+</div>
 
 <footer class="bck dark text color white">
     <div class="row">
@@ -126,5 +156,10 @@
       </nav>
     </div>
 </footer>
+
+
+    <!-- TUKTUK.WIDGETS -->
+    <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
+    <script src="../package/widgets/tuktuk.widget.modal.js"></script>
 </body>
 </html>
