--- a/examples/modal.html
+++ b/examples/modal.html
@@ -6,20 +6,8 @@
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <!-- TUKTUK -->
-    <link rel="stylesheet" href="../stylesheets/css/tuktuk.layout.css">
-    <link rel="stylesheet" href="../stylesheets/css/tuktuk.grid.css">
-    <link rel="stylesheet" href="../stylesheets/css/tuktuk.flexbox.css">
-    <link rel="stylesheet" href="../stylesheets/css/tuktuk.font.css">
-    <link rel="stylesheet" href="../stylesheets/css/tuktuk.form.css">
-    <link rel="stylesheet" href="../stylesheets/css/tuktuk.button.css">
-    <link rel="stylesheet" href="../stylesheets/css/tuktuk.nav.css">
-    <link rel="stylesheet" href="../stylesheets/css/tuktuk.table.css">
-    <link rel="stylesheet" href="../stylesheets/css/tuktuk.list.css">
-    <link rel="stylesheet" href="../stylesheets/css/tuktuk.widget.css">
-    <link rel="stylesheet" href="../stylesheets/css/tuktuk.icon.css">
-    <link rel="stylesheet" href="../stylesheets/css/tuktuk.media.css">
-    <!-- TUKTUK.THEME -->
-    <link rel="stylesheet" href="../stylesheets/css/tuktuk.theme.css">
+    <link rel="stylesheet" href="../package/tuktuk.css">
+    <link rel="stylesheet" href="../package/theme.tuktuk.css">
     <!-- TUKTUK.WIDGETS -->
     <link rel="stylesheet" href="../widgets/modal/css/tuktuk.widget.modal.css">
 </head>
