--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="package/tuktuk.css">
     <link rel="stylesheet" href="package/theme.tuktuk.css">
     <!-- TUKTUK.WIDGETS -->
-    <link rel="stylesheet" href="package/widgets/tuktuk.widget.icon.css">
-    <link rel="stylesheet" href="package/widgets/tuktuk.widget.modal.css">
+    <link rel="stylesheet" href="package/widgets/icon/tuktuk.widget.icon.css">
+    <link rel="stylesheet" href="package/widgets/modal/tuktuk.widget.modal.css">
 </head>
 
 <body>
